<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">LBRY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="find_content">Find Content</string>
    <string name="your_content">Your Content</string>
    <string name="wallet">Wallet</string>
    <string name="following">Following</string>
    <string name="editors_choice">Editor\'s Choice</string>
    <string name="your_tags">Your Tags</string>
    <string name="all_content">All Content</string>
    <string name="channels">Channels</string>
    <string name="library">Library</string>
    <string name="publishes">Publishes</string>
    <string name="new_publish">New Publish</string>
    <string name="rewards">Rewards</string>
    <string name="invites">Invites</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="sign_in">Sign In</string>
    <string name="shuffle">Shuffle</string>
    <string name="startup_failed">App startup failed. Please check your data connection and try again. If this problem persists, please email hello@lbry.com</string>
    <string name="no_claim_search_content">No content to display at this time. Please refine your selection or check back later.</string>
    <string name="welcome_to_lbry">Welcome to LBRY.</string>
    <string name="welcome_paragraph">LBRY is a community-controlled content platform where you can find and publish videos, music, books, and more.</string>
    <string name="welcome_tos">By continuing, I agree to the &lt;a href="https://lbry.com/termsofservice"&gt;Terms of Service&lt;/a&gt; and confirm I am over the age of 13.</string>
    <string name="welcome_please_wait">Please wait while we get some things ready…</string>
    <string name="use_lbry">Use LBRY »</string>
    <string name="uri_placeholder">Search videos, music and more</string>
    <string name="find_channels_to_follow">Find Channels to follow</string>
    <string name="channels_you_follow">Channels you follow</string>
    <string name="discover">Discover</string>
    <string name="lbry_works_better">LBRY works better if you follow at least 5 creators you like. Sign in to show creators you follow if you already have an account.</string>
    <string name="select_five_subscriptions">Please select up to 5 creators to continue.</string>
    <string name="n_remaining">%1$d remaining…</string>
    <string name="done">Done</string>
    <string name="all">All</string>
    <string name="discover_channels">Discover new channels</string>
    <string name="anonymous">Anonymous</string>
    <string name="tags">Tags</string>
    <string name="share">Share</string>
    <string name="repost">Repost</string>
    <string name="tip">Tip</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="open_on_odysee_com">Open on ODYSEE.COM</string>
    <string name="report">Report</string>
    <string name="loading_decentralized_data">Loading decentralized data…</string>
    <string name="related_content">Related Content</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No comments to display at this time.</string>
    <string name="sdk_initializing_comments">Comments will display after the background service is initialized.</string>
    <string name="comment_error">Your comment could not be posted at this time. Please try again later.</string>
    <string name="channel_disabled_comments">This channel has disabled comments on their page.</string>
    <string name="creator_disabled_comments">The creator of this content has disabled comments.</string>
    <string name="share_lbry_content">Share LBRY content</string>
    <string name="view">View</string>
    <string name="play">Play</string>
    <string name="unsupported_content">Unsupported Content</string>
    <string name="unsupported_content_desc">Sorry, we are unable to display this content in the app. You can find the file %1$sin your downloads folder.</string>
    <string name="unsupported_content_to_odysee_desc">Sorry, we are unable to display this content in the app. Click the button to open it on the Odysee website.</string>
    <string name="nothing_at_this_location">There\'s nothing at this location.</string>
    <string name="dmca_complaint_blocked">In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this content from our applications. &lt;a href="https://lbry.com/faq/dmca"&gt;Read more&lt;/a&gt;</string>
    <string name="dmca_complaint_channel_blocked">In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this channel from our applications. &lt;a href="https://lbry.com/faq/dmca"&gt;Read more&lt;/a&gt;</string>
    <string name="publish_something_here">Publish something here</string>
    <string name="cannot_view_claim">This content cannot be accessed at this time. Please try again later.</string>
    <string name="zero_duration">0:00</string>
    <string name="claim_file_not_found">The file at "%1$s" does not exist.</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="delete_file">Delete file</string>
    <string name="confirm_delete_file_message">Are you sure you want to remove this file from your device?</string>
    <string name="unable_to_view_url">Failed to load %1$s. Please try again later.</string>
    <string name="no_cast_session_available">There is no cast session available at this time.</string>
    <string name="delete_content">Delete content?</string>
    <string name="confirm_delete_content_message">Are you sure you want to unpublish this content? No files will be removed from your device.</string>
    <string name="content_deleted">The content was successfully deleted from the blockchain.</string>
    <string name="content_failed_delete">The content could not be deleted at this time. Please try again later.</string>
    <string name="comment">Comment</string>
    <string name="comment_as">Comment as</string>
    <string name="please_enter_comment">Please enter a comment to post.</string>
    <string name="please_select_channel">Please select a channel to post your comment as.</string>
    <string name="comment_form_post">Post</string>
    <string name="comment_posted">Your comment was successfully posted.</string>
    <string name="please_select_repost_channel">Please select a channel to repost on.</string>
    <string name="reply">Reply</string>
    <string name="replying_to">Replying to %1$s</string>
    <string name="choose_app">Choose app</string>
    <plurals name="view_count">
        <item quantity="one">%1$s view</item>
        <item quantity="other">%1$s views</item>
    </plurals>
    <plurals name="confirm_purchase_message">
        <item quantity="one">This will purchase "%1$s" for %2$s credit</item>
        <item quantity="other">This will purchase "%1$s" for %2$s credits</item>
    </plurals>
    <plurals name="post_and_tip">
        <item quantity="one">Post and tip %1$s credit?</item>
        <item quantity="other">Post and tip %1$s credits?</item>
    </plurals>
    <plurals name="post_for_credits">
        <item quantity="one">Post for %1$s credit</item>
        <item quantity="other">Post for %1$s credits</item>
    </plurals>
    <plurals name="confirm_post_comment">
        <item quantity="one">This will post your comment with a tip of %1$s credit for %2$s</item>
        <item quantity="other">This will post your comment with a tip of %1$s credits for %2$s</item>
    </plurals>
    <string name="no_channel_info">There\'s nothing here yet.\nPlease check back later.</string>
    <string name="content">Content</string>
    <string name="website">Website</string>
    <string name="reposted">reposted</string>
    <string name="receive_all_notifications">You will receive all notifications</string>
    <string name="receive_no_notifications">You will not receive notifications for this channel</string>
    <string name="confirm_unfollow">Stop following channel?</string>
    <string name="user_interface">Content &amp; User interface</string>
    <string name="other">Other</string>
    <string name="enable_background_playback">Enable background playback</string>
    <string name="enable_dark_mode">Enable dark theme</string>
    <string name="show_mature_content">Show mature content</string>
    <string name="show_url_suggestions">Show URL suggestions</string>
    <string name="notifications">Notifications</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="content_interests">Content Interests</string>
    <string name="mini_player_bottom_spacing">Mini-player bottom spacing</string>
    <string name="keep_sdk_in_background">Keep the LBRY service running in the background for improved wallet and network performance</string>
    <string name="participate_in_data_network">Participate in the data network (requires app and background service restart)</string>
    <string name="send_buffering_events">Send buffering events to LBRY servers</string>
    <string name="email">Email</string>
    <string name="filter_for">Filter for</string>
    <string name="everyone">Everyone</string>
    <string name="tags_you_follow">Tags you follow</string>
    <string name="provide_email_address">Please provide an email address.</string>
    <string name="email_placeholder">you@example.com</string>
    <string name="email_sent_to">An email has been sent to</string>
    <string name="please_click_link">Please click the link in the message to complete signing in.</string>
    <string name="resend">Resend</string>
    <string name="continue_text">Continue</string>
    <string name="manual_reward_verification">Manual Reward Verification</string>
    <string name="reward_verification">Reward Verification</string>
    <string name="skip_queue_button_text">Skip for $%1$s</string>
    <string name="get_instantly_verified">You can get instantly verified to be able to participate in the rewards program using your Twitter account or skipping the manual verification queue.</string>
    <string name="twitter_verification">Twitter Verification</string>
    <string name="twitter_verification_desc">Get instantly verified using your Twitter account. Your Twitter email address must match the email that you provided and your account should be active.</string>
    <string name="twitter_verify">Verify with Twitter</string>
    <string name="phone_number_verification">Phone Number Verification</string>
    <string name="phone_number_verification_desc">Get instantly verified using your phone number.</string>
    <string name="phone_number_verify">Verify with phone number</string>
    <string name="skip_queue_verification">Skip the Queue</string>
    <string name="skip_queue_verification_desc">Skip the manual verification queue by paying a fee in order to start participating in the rewards program immediately.</string>
    <string name="skip_queue_manual_check">If you previously completed a purchase successfully and you still see this screen, please tap the verify purchase button below.</string>
    <string name="verify_purchase">Verify Purchase</string>
    <string name="request_to_be_verified">Please request to be verified on the &lt;a href="https://discordapp.com/invite/Z3bERWA"&gt;LBRY Discord server&lt;/a&gt;. A manual review can take anywhere from several minutes to several days.</string>
    <string name="enjoy_free_content">Please enjoy free content in the meantime!</string>
    <string name="fa_hashtag" translatable="false">&#xf292;</string>
    <string name="fa_globe_americas" translatable="false">&#xf57d;</string>
</resources>