<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/verification_email_collect_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:visibility="visible"
        android:layout_margin="@dimen/normal_06">

        <TextView
            android:textSize="@dimen/text_size_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/email"
            android:layout_marginBottom="@dimen/normal_01"
            android:textColor="@color/white"
            android:textFontWeight="300" />
        <TextView
            android:textSize="@dimen/text_size_06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/provide_email_address"
            android:textColor="@color/white"
            android:textFontWeight="300" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verification_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_01"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@null">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verification_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:hint="@string/email_placeholder"
                android:singleLine="true"
                android:textSize="@dimen/text_size_10"
                android:textAlignment="center"
                android:textFontWeight="300" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/normal_01">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/verification_email_continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/continue_text" />
            <ProgressBar
                android:id="@+id/verification_email_add_progress"
                android:visibility="gone"
                android:layout_width="@dimen/normal_03"
                android:layout_height="@dimen/normal_03"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verification_email_verify_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/normal_06"
        android:visibility="gone">

        <TextView
            android:textSize="@dimen/text_size_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/sign_in"
            android:layout_marginBottom="@dimen/normal_01"
            android:textColor="@color/white"
            android:textFontWeight="300" />
        <TextView
            android:textSize="@dimen/text_size_06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/email_sent_to"
            android:textColor="@color/white"
            android:textFontWeight="300" />

        <TextView
            android:id="@+id/verification_email_added_address"
            android:textSize="@dimen/text_size_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_01"
            android:ellipsize="middle"
            android:fontFamily="@font/inter"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textFontWeight="300" />

        <TextView
            android:textSize="@dimen/text_size_06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_01"
            android:fontFamily="@font/inter"
            android:text="@string/please_click_link"
            android:textColor="@color/white"
            android:textFontWeight="300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_01"
            android:orientation="horizontal"
            android:weightSum="9">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/verification_email_resend_button"
                android:layout_weight="3"
                android:layout_width="@dimen/small_00"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/resend" />

            <View
                android:layout_weight="3"
                android:layout_width="@dimen/small_00"
                android:layout_height="@dimen/small_00" />

            <TextView
                android:id="@+id/verification_email_edit_button"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="right"
                android:layout_weight="3"
                android:layout_width="@dimen/small_00"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textFontWeight="300" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>